# couchit_experiment

./: .gitignore  configure.ac
couchapps/couchit/: _id  rewrites.json
couchapps/couchit/_attachments/: index.html
couchapps/manager/: hostname.txt  rewrites.json
couchapps/manager/_attachments/: index.html  settings.js
couchapps/manager/_attachments/css/: couchit.css
couchapps/manager/_attachments/js/: couchit.js
etc/couchdb/: default.ini.tpl.in
src/: Makefile.am
src/couchdb/: couch_auth_cache.erl
src/couchit/: Makefile.am  couchit_httpd.erl  couchit_util.erl
utils/: Makefile.am
